fixed invisible css class

--- a/style/bootstrap_custom.css
+++ b/style/bootstrap_custom.css
@@ -157,7 +157,7 @@ form {
 	white-space: inherit;
 }
 
-.hidden {
+.hidden , .invisible{
   display: inherit;
   visibility: inherit;
 }
